[package]
name = "bilidm"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Bilibili video player."
repository = "https://github.com/akirco/bilidm"
authors = ["akirco <aki.me.morin@gmail.com>"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
unicode-width = "0.2.2"
rand = "0.10.0"
bytes = "1.11.1"
rodio = { version = "0.22.2", default-features = false, features = [
  "symphonia-all",
  "playback",
] }
